# recpart

./: Cargo.toml  README.md  REQUIREMENTS.md
docs/: installer-production-readiness-gaps.md  use-cases.md
docs/frontend-handoff/: README.md  state-machine.md
docs/frontend-handoff/examples/: apply-dry-run-ab.json  error-missing-tool.json  plan-ab.json  plan-mutable.json
docs/frontend-handoff/schemas/: apply-result.schema.json  error.schema.json  list-disks.schema.json  plan-result.schema.json
frontend/: README.md  package.json  tsconfig.json
frontend/src/: index.test.ts  index.ts
src/: cli.rs  error.rs  exec.rs  handoff.rs  json.rs  lib.rs  main.rs  plan.rs  policy.rs  preflight.rs  tui.rs  types.rs
tests/: apply_flow.rs  cli.rs  confirmation.rs  e2e_real_disk.rs  errors.rs  handoff.rs  integration_cli.rs  json_contract.rs  layout_request.rs  mode_defaults.rs  plan_determinism.rs  plan_layout.rs  plan_only.rs  preflight.rs  safety.rs  safety_confirm.rs  ui_layout.rs  use_case_scenarios.rs
