[package]
name = "recpart"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Mode-aware partition planning and apply backend for LevitateOS"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
distro-spec = { path = "../../distro-spec" }

[dev-dependencies]
tempfile = "3"
